# parallaft

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  parasite-wrapper.c
.github/workflows/: rust.yml
docs/: hardware_support.md
libfpt-ebpf/: .gitignore  Cargo.toml  build.rs
libfpt-ebpf/src/: main.rs
libfpt-ebpf/src/bpf/: fpt.bpf.c
libfpt-rs/: Cargo.toml
libfpt-rs/src/: ioctl.rs  lib.rs  main.rs
parallaft/: Cargo.toml  Cross.toml
parallaft/configs/: apple_m2_error_injection.yml  intel_12700_fixed_interval.yml  intel_14700_bisim.yml
parallaft/remote/: hasher.c
parallaft/remote/std/: io.h  std.h
parallaft/scripts/: fix_cpufreq_permissions.sh
parallaft/src/: lib.rs  main.rs  test_utils.rs
parallaft/src/comparators/: intel_hybrid_workaround.rs  mod.rs
parallaft/src/debug_utils/: core_dumper.rs  exec_point_sync_checker.rs  mod.rs  watchpoint.rs
parallaft/src/dirty_page_trackers/: mod.rs  null.rs  soft_dirty.rs
parallaft/src/events/: exec_point.rs  mod.rs
parallaft/src/features/: pagemap_scan.rs
parallaft/src/helpers/: affinity.rs  mod.rs  (+1 more)
parallaft/tests/: integration_tests.rs
parasite/: Cargo.toml
parasite/.cargo/: config.toml
parasite/src/: handler.rs  lib.rs  log.rs  main.rs
reldrv/: Cargo.toml  build.rs
reldrv/configs/: apple_m2_fixed_interval.yml  apple_m2_raft.yml  neoverse_v2_fixed_interval.yml
reldrv/parasite/: .gitignore  Makefile
reldrv/parasite/.cargo/: config.toml
reldrv/parasite/src/: log.rs
reldrv/parasite/src/commands/: hello.rs  mod.rs  verify.rs
reldrv/remote/: hasher.c  pack.lds.S
reldrv/remote/arch/aarch64/: entry.s  syscall.s
reldrv/remote/arch/x86_64/: entry.s  syscall.s
reldrv/remote/std/: string.h  syscall.h
reldrv/scripts/: fix_cpufreq_permissions.sh  parse_error_injector_stats.py  reset_cpufreq.sh
reldrv/src/: affinity.rs  check_coord.rs  checkpoint.rs  client_control.rs  dirty_page_tracer.rs  dispatcher.rs  error.rs  lib.rs  main.rs  page_diff.rs  process.rs  remote_memory.rs  saved_syscall.rs  segments.rs  stats.rs  test_utils.rs  vdso.rs
reldrv/src/comparators/: intel_hybrid_workaround.rs  mod.rs
reldrv/src/comparators/memory/: hasher.rs  mod.rs  simple.rs
reldrv/src/debug_utils/: core_dumper.rs  exec_point_dumper.rs  in_protection_asserter.rs  mod.rs  watchpoint.rs
reldrv/src/dirty_page_trackers/: fpt.rs  full.rs  kpagecount.rs  mod.rs  null.rs  soft_dirty.rs  uffd.rs
reldrv/src/events/: comparator.rs  insn_patching.rs  memory.rs  migration.rs  mod.rs  module_lifetime.rs  process_lifetime.rs  segment.rs  signal.rs  syscall.rs
reldrv/src/exec_point_providers/: mod.rs
reldrv/src/exec_point_providers/pmu/: exec_point.rs  mod.rs
reldrv/src/features/: dirty_page_userspace_scan.rs  mod.rs
reldrv/src/helpers/: affinity.rs  checker_sched.rs  checker_timeout_killer.rs  checkpoint_size_limiter.rs  cpufreq.rs  insn_patcher.rs  madviser.rs  mod.rs  odf.rs  spec_ctrl.rs  vdso.rs
reldrv/src/helpers/cpufreq/: dynamic.rs  fixed.rs  governor.rs  mod.rs  utils.rs
reldrv/src/inferior_rtlib/: legacy.rs  mod.rs  pmu.rs  relrtlib.rs
reldrv/src/inferior_rtlib/pmu/: counter.rs  mod.rs  perf_typed_raw.rs  pmu_type.rs
reldrv/src/process/: compel.rs  compel_parasite.rs  detach.rs  dirty_pages.rs  madvise.rs  memory.rs  mod.rs  registers.rs  safeptrace_ext.rs  siginfo.rs  sigqueue.rs  stats.rs  syscall.rs  unwind.rs
reldrv/src/signal_handlers/: begin_protection.rs  cpuid.rs  mod.rs  mrs.rs  rdtsc.rs  slice_segment.rs
reldrv/src/slicers/: dynamic.rs  entire_program.rs  fixed_interval.rs  mod.rs
reldrv/src/statistics/: cache.rs  counter.rs  dirty_pages.rs  hwmon.rs  memory.rs  mod.rs  perf.rs  timing.rs
reldrv/src/syscall_handlers/: clone.rs  execve.rs  exit.rs  mmap.rs  mod.rs  record_replay.rs  replicate.rs  rseq.rs
reldrv/src/throttler/: nr_segments.rs
reldrv/src/throttlers/: checkpoint_sync.rs  memory.rs  mod.rs  nr_checkers.rs  nr_segments.rs
reldrv/src/tracing/: mod.rs
reldrv/src/types/: chains.rs  checker.rs  checker_exec.rs  checker_status.rs  checkpoint.rs  execution_point.rs  exit_reason.rs  mod.rs  process_id.rs  segment.rs
reldrv/src/types/breakpoint/: hw.rs  mod.rs  sw.rs
reldrv/src/types/breakpoint/hw/: aarch64_ptrace.rs  perf.rs
reldrv/src/types/perf_counter/: linux.rs  mod.rs  pmu_type.rs  sub.rs
reldrv/src/types/perf_counter/cpu_info/: cpu_model.rs  mod.rs  pmu.rs
reldrv/src/types/perf_counter/raw_events/: hardware_under_pmu.rs  mod.rs
reldrv/src/types/perf_counter/symbolic_events/: branch.rs  breakpoint.rs  generic_hw.rs  mod.rs
reldrv/src/types/perf_counter/symbolic_events/expr/: base.rs  mod.rs
reldrv/src/types/segment_record/: manual_checkpoint.rs  mod.rs  record.rs  replay.rs  saved_event.rs  saved_memory.rs  saved_signal.rs  saved_syscall.rs  saved_trap_event.rs
reldrv/src/utils/: compare_memory.rs  injector.rs
reldrv/src/utils/injector/: mod.rs
reldrv/tests/: ckpt_duplicated_fini.c  ckpt_no_fini.c  common.h  console_io.c  integration_tests.rs  syscall_brk.c  syscall_clock_gettime.c  syscall_getpid.c  syscall_getpid_loop.c  syscall_mmap.c  syscall_mremap.c  syscall_read.c  syscall_read_multiple.c  unknown_memrw.c
reldrv/tests/basics/: mod.rs
reldrv/tests/benches/: checkpointing.rs  mod.rs  signal.rs  syscall.rs
reldrv/tests/common/: custom_sysno.rs  mod.rs  relrt.rs
reldrv/tests/error_handling/: excess_syscall.rs  mod.rs  state_mismatch.rs
reldrv/tests/execution_points/: freestanding.rs  migration.rs  mod.rs  pmc.rs
reldrv/tests/instructions/: cpuid.rs  mod.rs  mrs.rs  rdtsc.rs
reldrv/tests/limits/: memory.rs  mod.rs  nr_segments.rs
reldrv/tests/segmenter/: pmu.rs
reldrv/tests/signals/: mod.rs
reldrv/tests/syscalls/: brk.rs  clock_gettime.rs  exit.rs  fork_execve.rs  getpid.rs  mman.rs  read_write.rs  unsupported.rs
reverie-memory/src/: addr.rs
reverie-syscalls/: Cargo.toml
reverie-syscalls/src/: macros.rs
safeptrace/: Cargo.toml
safeptrace/src/: lib.rs  memory.rs
src/: checkpoint.rs  checkpoint_new.rs  client_control.rs  dirty_page_tracer.rs  main.rs  page_diff.rs  process.rs  utils.rs
(+93 files in other folders)
