[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.10.0"
#libc = "0.2.139"
libc = { path = "/home/peter/libc" }
log = "0.4.17"
#nix = { git = "https://github.com/mbyzhang/nix.git" }
nix = { path = "/home/peter/nix" }
compel = { git = "https://github.com/mbyzhang/compel-rs.git" }
parasite = { path = "parasite" }
procfs = { git = "https://github.com/mbyzhang/procfs.git" }
pretty-hex = "0.3.0"
tokio = { version = "1.26.0", features = ["full"] }
parking_lot = "0.12.1"
bitflags = "1.3.2"
reverie-syscalls = { path = "reverie-syscalls" }

[build-dependencies]
cc = "1.0.78"

[profile.release]
debug = true

[features]
default = []
