[package]
name = "libfpt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
nix = { git = "https://github.com/mbyzhang/nix.git", branch = "ptrace-get-rseq-configuration"}
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"] }
ctrlc = "3.4.1"

[dev-dependencies]
lazy_static = "1.4.0"
