[package]
name = "reldrv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
log = "0.4.17"
nix = { git = "https://github.com/mbyzhang/nix.git", branch = "ptrace-get-rseq-configuration" }
procfs = { git = "https://github.com/mbyzhang/procfs.git" }
pretty-hex = "0.3.0"
reverie-syscalls = { path = "../reverie-syscalls" }
syscalls = "*"
log-panics = { version = "2", features = ["with-backtrace"]}
lazy-init = "*"
perf-event2 = "0.7.2"
thiserror = "1.0.43"
human_bytes = "0.4.2"
lazy_static = "1.4.0"
libfpt-rs = { path = "../libfpt-rs" }
clap-num = "1.0.2"
unwind = { version = "0.4.1", features = ["ptrace"] }
parking_lot = { git = "https://github.com/mbyzhang/parking_lot.git", features = ["arc_lock"] }
typed-arena = "2.0.2"
pretty_env_logger = "0.5.0"
scopeguard = "1.2.0"
perf-event-open-sys2 = "5.0.3"
derive_builder = "0.20.0"
git-version = "0.3.9"
bitflags = "2.5.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
debug = true

[features]
default = ["intel_cat"]
intel_cat = []
