[package]
name = "reldrv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4.17"
nix = { git = "https://github.com/mbyzhang/nix.git", branch = "ptrace-get-rseq-configuration" }
procfs = { git = "https://github.com/mbyzhang/procfs.git", rev = "3a457564213c9b3402c9bc5042742d3ec0dd5d3e" }
pretty-hex = "0.3.0"
reverie-syscalls = { path = "../reverie-syscalls" }
syscalls = "*"
log-panics = { version = "2", features = ["with-backtrace"]}
lazy-init = "*"
perf-event2 = "0.7.2"
thiserror = "1.0.43"
human_bytes = "0.4.2"
lazy_static = "1.4.0"
libfpt-rs = { path = "../libfpt-rs", optional = true }
clap-num = "1.1"
parking_lot = { git = "https://github.com/mbyzhang/parking_lot.git", features = ["arc_lock"] }
typed-arena = "2.0.2"
pretty_env_logger = "0.5.0"
scopeguard = "1.2.0"
perf-event-open-sys2 = "5.0.3"
derive_builder = "0.20.0"
git-version = "0.3.9"
bitflags = "2.5.0"
derivative = "2.2.0"
itertools = "0.12.1"
path_macro = "1.0.0"
try-insert-ext = "0.1.0"
cfg-if = "1.0.0"
rand = "0.8.5"
userfaultfd = { git = "https://github.com/mbyzhang/userfaultfd-rs.git", features = ["linux5_7"], rev = "00335e2ba375061232beadfe8b06ccb1a4da14d7", optional = true }
pidfd_getfd = { version = "0.2.2", optional = true }
pidfd = "0.2.4"
strum = { version = "0.26.3", features = ["derive"] }
serde = "1.0.209"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3"
dbg_hex = "0.2.0"

[features]
default = ["intel_cat"]
intel_cat = []
dpt_uffd = ["dep:userfaultfd", "dep:pidfd_getfd"]
dpt_fpt = ["dep:libfpt-rs"]
helper_checkpoint_size_limiter = ["dep:libfpt-rs"]
